tests/NormalTests/paczka1/small_fuzzy/82602670.err
Error in line 2: SHjP A546 45,9
Error in line 12: SHjP A546 28,15
